--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next/font": "^13.0.6",
+    "axios": "^1.5.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "mongoose": "^6.8.2",
